Porcaria de Sonar imi scade puncte fiindca am cod comentat sau ca am comentat cu /// inloc de //, ce tocilar